# hlsxarr

./: .gitignore  README.md  hlsxarr.ipynb  pyproject.toml
hlsxarr/: __init__.py  exceptions.py  hls.py  roi.py  types.py  utils.py
hlsxarr/process/: __init__.py  merge.py  read.py  reads.py  reproject.py  search.py  stac2xrda.py  tiles.py
test/process/: test_stac2xrda.py
