[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlsxarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netcdf4>=1.7.2",
    "pyproj>=3.7.0",
    "pystac-client>=0.8.5",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
    "xarray>=2025.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["hlsxarr", "hlsxarr.process"]



